modify stub
