# server/bill_segmentation/models/img_on_server_dto.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from bill_segmentation.models.base_model_ import Model
+from bill_segmentation import util
+
+
+class ImgOnServerDto(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, upload_img_id=None, upload_img_url=None):  # noqa: E501
+        """ImgOnServerDto - a model defined in OpenAPI
+
+        :param upload_img_id: The upload_img_id of this ImgOnServerDto.  # noqa: E501
+        :type upload_img_id: str
+        :param upload_img_url: The upload_img_url of this ImgOnServerDto.  # noqa: E501
+        :type upload_img_url: str
+        """
+        self.openapi_types = {
+            'upload_img_id': str,
+            'upload_img_url': str
+        }
+
+        self.attribute_map = {
+            'upload_img_id': 'uploadImgId',
+            'upload_img_url': 'uploadImgUrl'
+        }
+
+        self._upload_img_id = upload_img_id
+        self._upload_img_url = upload_img_url
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ImgOnServerDto':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The imgOnServerDto of this ImgOnServerDto.  # noqa: E501
+        :rtype: ImgOnServerDto
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def upload_img_id(self):
+        """Gets the upload_img_id of this ImgOnServerDto.
+
+
+        :return: The upload_img_id of this ImgOnServerDto.
+        :rtype: str
+        """
+        return self._upload_img_id
+
+    @upload_img_id.setter
+    def upload_img_id(self, upload_img_id):
+        """Sets the upload_img_id of this ImgOnServerDto.
+
+
+        :param upload_img_id: The upload_img_id of this ImgOnServerDto.
+        :type upload_img_id: str
+        """
+
+        self._upload_img_id = upload_img_id
+
+    @property
+    def upload_img_url(self):
+        """Gets the upload_img_url of this ImgOnServerDto.
+
+
+        :return: The upload_img_url of this ImgOnServerDto.
+        :rtype: str
+        """
+        return self._upload_img_url
+
+    @upload_img_url.setter
+    def upload_img_url(self, upload_img_url):
+        """Sets the upload_img_url of this ImgOnServerDto.
+
+
+        :param upload_img_url: The upload_img_url of this ImgOnServerDto.
+        :type upload_img_url: str
+        """
+
+        self._upload_img_url = upload_img_url
