# server/bill_segmentation/models/roi_pts_dto.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from bill_segmentation.models.base_model_ import Model
+from bill_segmentation.models.roi_pts_dto_roi_pts import RoiPtsDtoRoiPts
+from bill_segmentation import util
+
+from bill_segmentation.models.roi_pts_dto_roi_pts import RoiPtsDtoRoiPts  # noqa: E501
+
+class RoiPtsDto(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, roi_pts=None):  # noqa: E501
+        """RoiPtsDto - a model defined in OpenAPI
+
+        :param roi_pts: The roi_pts of this RoiPtsDto.  # noqa: E501
+        :type roi_pts: List[RoiPtsDtoRoiPts]
+        """
+        self.openapi_types = {
+            'roi_pts': List[RoiPtsDtoRoiPts]
+        }
+
+        self.attribute_map = {
+            'roi_pts': 'roiPts'
+        }
+
+        self._roi_pts = roi_pts
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RoiPtsDto':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The roiPtsDto of this RoiPtsDto.  # noqa: E501
+        :rtype: RoiPtsDto
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def roi_pts(self):
+        """Gets the roi_pts of this RoiPtsDto.
+
+
+        :return: The roi_pts of this RoiPtsDto.
+        :rtype: List[RoiPtsDtoRoiPts]
+        """
+        return self._roi_pts
+
+    @roi_pts.setter
+    def roi_pts(self, roi_pts):
+        """Sets the roi_pts of this RoiPtsDto.
+
+
+        :param roi_pts: The roi_pts of this RoiPtsDto.
+        :type roi_pts: List[RoiPtsDtoRoiPts]
+        """
+
+        self._roi_pts = roi_pts
