# server/bill_segmentation/models/roi_pts_dto_roi_pts.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from bill_segmentation.models.base_model_ import Model
+from bill_segmentation import util
+
+
+class RoiPtsDtoRoiPts(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, x=None, y=None):  # noqa: E501
+        """RoiPtsDtoRoiPts - a model defined in OpenAPI
+
+        :param x: The x of this RoiPtsDtoRoiPts.  # noqa: E501
+        :type x: int
+        :param y: The y of this RoiPtsDtoRoiPts.  # noqa: E501
+        :type y: int
+        """
+        self.openapi_types = {
+            'x': int,
+            'y': int
+        }
+
+        self.attribute_map = {
+            'x': 'x',
+            'y': 'y'
+        }
+
+        self._x = x
+        self._y = y
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'RoiPtsDtoRoiPts':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The roiPtsDto_roiPts of this RoiPtsDtoRoiPts.  # noqa: E501
+        :rtype: RoiPtsDtoRoiPts
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def x(self):
+        """Gets the x of this RoiPtsDtoRoiPts.
+
+
+        :return: The x of this RoiPtsDtoRoiPts.
+        :rtype: int
+        """
+        return self._x
+
+    @x.setter
+    def x(self, x):
+        """Sets the x of this RoiPtsDtoRoiPts.
+
+
+        :param x: The x of this RoiPtsDtoRoiPts.
+        :type x: int
+        """
+
+        self._x = x
+
+    @property
+    def y(self):
+        """Gets the y of this RoiPtsDtoRoiPts.
+
+
+        :return: The y of this RoiPtsDtoRoiPts.
+        :rtype: int
+        """
+        return self._y
+
+    @y.setter
+    def y(self, y):
+        """Sets the y of this RoiPtsDtoRoiPts.
+
+
+        :param y: The y of this RoiPtsDtoRoiPts.
+        :type y: int
+        """
+
+        self._y = y
